# natgeo-wallpapers

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  set_wallpaper.sh
assets/: service.template  timer.template
src/: lib.rs  main.rs
tests/: integration.rs
