[package]
name = "natgeo-wallpapers"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = 1 }
expect_used = { level = "warn", priority = 1 }
# Allow some pedantic lints for readability
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
uninlined_format_args = "allow"
must_use_candidate = "allow"
single_char_pattern = "allow"
option_if_let_else = "allow"
ignored_unit_patterns = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
reqwest = {version = "0.13.1", features = ["blocking", "json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.149"}
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.8"
